5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1716_2505.log
== SUBMITION (2019-05-14 16:36:52) 
-- CODE:
from math import*

x = eval(input())
k =  int(input())
contador = 1
sinal = -1
soma = x
expoente = 3 

while (contador < k):
	soma =  soma + (sinal * (x**expoente/factorial(expoente))
	sinal = sinal*-1
	expoente = expoente + 2
	contador += 1
print(round(soma,10))
-- EXECUTION TIME:
0.191549
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 12
    sinal = sinal*-1
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:39:06) 
-- CODE:
from math import*

x = eval(input("x: "))
k =  int(input())
contador = 1
sinal = -1
soma = x
expoente = 3 

while (contador < k):
	soma =  soma + (sinal * (x**expoente/factorial(expoente))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1
print(round(soma,10))
-- EXECUTION TIME:
0.152056
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 12
    sinal = sinal*(-1)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:39:54) 
-- CODE:
from math import*

x = eval(input("x: "))
k =  int(input())
contador = 1
sinal = -1
soma = x
expoente = 3 

while (contador < k):
	soma =  soma + (sinal * (x**expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1
print(round(soma,10))
-- EXECUTION TIME:
0.27033
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
